Wed Aug 30 11:31:47 2000  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ext/Win32API/Win32API.c (Win32API_initialize): add the
	  arguments checking.

Tue Aug 29 15:18:20 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): the value of -K may be empty.

Sat Aug 26 01:37:09 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* configure.in: check _mktemp.

	* ruby.h: use _mktemp instead of mktemp if available.
	  quiet ld warning.

Thu Aug 24 15:27:39 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ext/socket/socketport.h: use `extern int h_errno' if needed.

Sat Aug 19 01:34:02 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ext/sdbm/_sdbm.c (sdbm_prep): flags should be or-ed by O_BINARY on
	  Win32 too.

	* ext/sdbm/_sdbm.c (makroom): fill hole with 0 on Win32 too.

Fri Aug 18 11:06:19 2000  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/socket/socket.c (s_accept): start GC on EMFILE/ENFILE.

Thu Aug 17 16:04:48 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (is_defined): should clear ruby_errinfo.

Wed Aug 16 15:30:58 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.4.6 released.

Tue Aug 15 17:30:59 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (frame_dup): should set flag FRAME_MALLOC after
	  argv allocation.

	* eval.c (blk_free): should not free argv if GC was called before
	  frame_dup.

Tue Aug 15 01:45:28 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_eof): should return true at the end of ARGF without
	  checking stdout if arguments are given.

Mon Aug 14 10:34:32 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_status): status should return false for normal
	  termination, nil for termination by exception.

Wed Aug  9 13:24:25 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* win32/win32.[ch]: emulate rename(2).

Mon Aug  7 13:59:12 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.h (CLONESETUP): should copy flags before any potential
	  object allocation.