@@ -495,7 +495,14 @@ Init_tcltklib()
     VALUE lib = rb_define_module("TclTkLib");
     VALUE ip = rb_define_class("TclTkIp", rb_cObject);
 
-    eTkCallbackBreak = rb_define_class("TkCallbackBreak", rb_eStandardError);
+#if defined USE_TCL_STUBS && defined USE_TK_STUBS
+    extern int ruby_tcltk_stubs();
+    int ret = ruby_tcltk_stubs();
+    if (ret)
+	rb_raise(rb_eLoadError, "tcltklib: tcltk_stubs init error(%d)", ret);
+#endif
+
+   eTkCallbackBreak = rb_define_class("TkCallbackBreak", rb_eStandardError);
     eTkCallbackContinue = rb_define_class("TkCallbackContinue",rb_eStandardError);
 
     rb_define_module_function(lib, "mainloop", lib_mainloop, 0);
